# lab1_5_spo

./: CMakeLists.txt  client.c  main.c  ql.lex  ql.y  server.c  xml_api.c  xml_api.h
